--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -27,5 +27,10 @@ header{
   font-size: 2rem;
   margin: 0px;
   color: black;
+} 
+.name h1 a{
+  text-decoration: none;
+  margin: 0;
+  color: black;
   opacity: 55%;
 }
