--- a/src/assets/styles/Menu.css
+++ b/src/assets/styles/Menu.css
@@ -24,16 +24,25 @@
   left: 100%;
   height: 100%;
   width: 100%;
-  background-color: #fff0c9;
   overflow: hidden;
   transition: all 1s ease;
+  background-color: #fff0c9;
 }
 .menu-container__header{
   width: 100%;
   height: 60px;
   background-color: #ffe39a;
   box-shadow: 0px -10px 20px 4px;;
+  display: flex;
+  align-items: center;
 }
+.name h2{
+  font-family: 'Redressed', cursive;
+  font-size: 2rem;
+  margin: 0px;
+  color: black;
+  opacity: 55%;
+} 
 .menu-container__nav{
   width: 100%;
   height: 100%;
@@ -47,7 +56,7 @@
 .menu-container__nav ul li{
   list-style: none;
   display: block;
-  height: 20vh;
+  height: 21vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -57,4 +66,8 @@
   text-decoration: none;
   color: #5f5f5f;
   font-size: 4rem;
+}
+
+.menu-container__nav ul li:hover{
+  background-color: white;
 }
