--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -4,27 +4,32 @@
 }
 body{
   margin: 0;
+  background-color: #fffaec;
 }
 html{
   font-size: 62.5%;
 }
-
+#app{
+  position: relative;
+  overflow: hidden;
+}
 header{
   width: 100%;
   height: 60px;
   background-color: #ffe39a;
   display: flex;
   align-items: center;
-  box-shadow: 0px -10px 20px 4px;;
+  box-shadow: 0px -10px 20px 4px;
+  z-index: 1;
 }
 .name{
-  height: 24px;
-  width: 108px;
+  height: 28px;
+  width: 130px;
   margin-left: 10px;
 }
 .name h1{
   font-family: 'Redressed', cursive;
-  font-size: 2rem;
+  font-size: 2.4rem;
   margin: 0px;
   color: black;
 } 
