--- a/src/assets/styles/Menu.css
+++ b/src/assets/styles/Menu.css
@@ -1,11 +1,3 @@
-.menu{
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-}
 .menu-logo {
   height: 24px;
   width: 24px;
@@ -19,14 +11,14 @@
   opacity: 55%;
 }
 .menu-container{
-  position: absolute;
-  top: 0;
-  left: 100%;
   height: 100%;
   width: 100%;
   overflow: hidden;
   transition: all 1s ease;
   background-color: #fff0c9;
+  position: absolute;
+  top: 0;
+  left: 100%;
 }
 .menu-container__header{
   width: 100%;
@@ -35,10 +27,12 @@
   box-shadow: 0px -10px 20px 4px;;
   display: flex;
   align-items: center;
+  position: relative;
+  z-index: 1;
 }
 .name h2{
   font-family: 'Redressed', cursive;
-  font-size: 2rem;
+  font-size: 2.4rem;
   margin: 0px;
   color: black;
   opacity: 55%;
@@ -46,6 +40,8 @@
 .menu-container__nav{
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 0;
 }
 .menu-container__nav ul{
   margin: 0;
@@ -53,21 +49,41 @@
   height: 100%;
   width: 100%;
 }
-.menu-container__nav ul li{
+.menu-container__nav ul a li{
   list-style: none;
-  display: block;
   height: 21vh;
+  color: #5f5f5f;
+  font-size: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid #7b000014;
+  position: relative;
+  z-index: 0;
+  transition: all 1s ease;
 }
-.menu-container__nav li a{
+.menu-container__nav ul a{
   text-decoration: none;
-  color: #5f5f5f;
-  font-size: 4rem;
+  display: block;
+  position: relative;
 }
-
-.menu-container__nav ul li:hover{
-  background-color: white;
+.menu-container__nav ul li::before{
+  content: '';
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  background-color: #fff9ea;
+  transition: all .2s ease;
+  z-index: -1;
+}
+.menu-container__nav li:active{
+  /* transform: scale3d(1.2, 1.2, 1); */
+  /* box-shadow: 0 0 0 0; */
+  color: #272727;
+}
+.menu-container__nav li:active::before{
+  width: 100%;
+  left: 0;
 }
