--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap'); */
 *{
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 body{
   margin: 0;
