--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,3 +1,7 @@
+*{
+  -webkit-tap-highlight-color: transparent;
+}
+
 .Home{
   width: 100%;
   height: 100%;
@@ -8,7 +12,39 @@
   width: 100%;
   background-color: #fff1d6;
   position: relative;
+  overflow: hidden;
   z-index: -1;
+}
+.carousel-products__slider{
+  white-space: nowrap;
+  transition: ease 1000ms;
+  
+}
+.slide{
+  display: inline-block;
+  height: 320px;
+  width: 320px;
+  position: relative;
+}
+.slideDots{
+  position: absolute;
+  bottom: 20px;
+  left: calc(50% - 51px);
+  text-align: center;
+}
+.slideShowDot{
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  margin: 15px 7px 0px;
+  background-color: #fffaec;
+
+}
+.slideShowDot.active{
+  background-color: #ffe39a;
+
 }
 .description{
   width: 100%;
