--- a/src/assets/styles/Menu.css
+++ b/src/assets/styles/Menu.css
@@ -49,14 +49,10 @@
   height: 100%;
   width: 100%;
 }
-.menu-container__nav ul a li{
+.menu-container__nav ul li{
   list-style: none;
   height: 21vh;
-  color: #5f5f5f;
   font-size: 4rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-bottom: 2px solid #7b000014;
   position: relative;
   z-index: 0;
@@ -66,8 +62,14 @@
   text-decoration: none;
   display: block;
   position: relative;
+  color: #5f5f5f;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.menu-container__nav ul li::before{
+.menu-container__nav ul a::before{
   content: '';
   width: 0;
   height: 100%;
@@ -78,12 +80,12 @@
   transition: all .2s ease;
   z-index: -1;
 }
-.menu-container__nav li:active{
+.menu-container__nav a:active{
   /* transform: scale3d(1.2, 1.2, 1); */
   /* box-shadow: 0 0 0 0; */
   color: #272727;
 }
-.menu-container__nav li:active::before{
+.menu-container__nav a:active::before{
   width: 100%;
   left: 0;
 }
